# AstroWorks

./: PROB_KOZAI_V001.f90  output.txt
Pokorny_et_al_2013/: Description.odt  IN
Pokorny_et_al_2019_ApJ/: @make  C_NORTH.in  C_SOUTH.in  README.txt  header  header_1line  impact_ray_simul_V002_GITHUB  impact_ray_simul_V002_GITHUB.f90  vars.inc
Pokorny_et_al_2019_JGR/: readme
Pokorny_etal_2020_Ceres/: README.md
Pokorny_etal_2020_Ceres/ICQtoOBJ/: 01_runme.sh  ICQtoOBJ.f90  OBJ2BINARY.f90  README.md
Pokorny_etal_2020_Ceres/Meteoroid_Code/: Meteoroids_CODE_V03_Github.f90  RAY_MODS_Github.f90  README.md  make_github.sh
Pokorny_etal_2020_Ceres/Meteoroid_Code/Analysis/One_Orbit_Tilt_4_Lat_Strips/: 00_runme.sh  01_analyze_make_plot.sh  02_show_differences.sh  TAA_169  input  orbital_data.in  plot_9lines_Lat_Strips.plt
Pokorny_etal_2020_Ceres/Meteoroid_Code/Analysis/Sources/: Analyze_Nareas.f90
Pokorny_etal_2020_Ceres/Meteoroid_Code/C_codes/: BVH.cpp  Tri.hpp  Vector3.h  obj.h  simple_vis.cpp  simple_vis.h
Pokorny_etal_2020_Ceres/Meteoroid_Code/C_codes/fastbvh/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  setup.py
Pokorny_etal_2020_Ceres/Meteoroid_Code/C_codes/fastbvh/include/: fastbvh
Pokorny_etal_2020_Ceres/Meteoroid_Code/C_codes/fastbvh/src/: BBox.cpp  BVH.h  IntersectionInfo.h  pybvh.cpp
Pokorny_etal_2020_Ceres/Meteoroid_Code/C_codes/tinyobjloader/: .gitignore
Pokorny_etal_2020_VenusCoorbs/: Asteroid_Types.f90  README.txt  Visual_Magnitudes
